Add solution to Section 1

--- a/java/src/main/java/bazel/bootcamp/BUILD
+++ b/java/src/main/java/bazel/bootcamp/BUILD
@@ -2,3 +2,8 @@
 #    "@io_grpc_grpc_java//core",
 #    "@io_grpc_grpc_java//netty",
 #    "@junit_junit//jar",
+
+java_binary(
+	name = "HelloBazelBootcamp",
+	srcs = ["HelloBazelBootcamp.java"],
+)
