Added targets to proto BUILD file for Section 3

--- a/proto/logger/BUILD
+++ b/proto/logger/BUILD
@@ -16,3 +16,15 @@ go_proto_library(
 	importpath = "bootcamp/proto/logger"
 )
 
+java_proto_library(
+	name = "logger_java_proto",
+	deps = [":logger_proto"]
+)
+
+java_grpc_library(
+	name = "logger_java_grpc",
+	srcs = [":logger_proto"],
+	deps = [":logger_java_proto"],
+)
+
+
