Added java targets to BUILD file for Section 3

--- a/java/src/main/java/bazel/bootcamp/BUILD
+++ b/java/src/main/java/bazel/bootcamp/BUILD
@@ -7,3 +7,21 @@ java_binary(
 	name = "HelloBazelBootcamp",
 	srcs = ["HelloBazelBootcamp.java"],
 )
+
+java_library(
+	name = "JavaLoggingClientLibrary",
+	srcs = ["JavaLoggingClientLibrary.java"],
+	deps = [
+		"//proto/logger:logger_java_proto",
+		"//proto/logger:logger_java_grpc",
+		"@io_grpc_grpc_java//core",
+		"@io_grpc_grpc_java//netty",
+
+	]
+)
+
+java_binary(
+	name = "JavaLoggingClient",
+	srcs = ["JavaLoggingClient.java"],
+	deps = [":JavaLoggingClientLibrary"]
+)
