Add java test targets for Section 4

--- a/java/src/main/java/bazel/bootcamp/BUILD
+++ b/java/src/main/java/bazel/bootcamp/BUILD
@@ -1,7 +1,7 @@
 # deps you may need for various targets
 #    "@io_grpc_grpc_java//core",
 #    "@io_grpc_grpc_java//netty",
-#    "@junit_junit//jar",
+#    "@junit_junit//jar" - optional,
 
 java_binary(
 	name = "HelloBazelBootcamp",
@@ -16,7 +16,6 @@ java_library(
 		"//proto/logger:logger_java_grpc",
 		"@io_grpc_grpc_java//core",
 		"@io_grpc_grpc_java//netty",
-
 	]
 )
 
@@ -24,4 +23,16 @@ java_binary(
 	name = "JavaLoggingClient",
 	srcs = ["JavaLoggingClient.java"],
 	deps = [":JavaLoggingClientLibrary"]
+)
+
+java_test(
+	name = "JavaLoggingClientLibraryTest",
+	srcs = ["JavaLoggingClientLibraryTest.java"],
+	deps = [":JavaLoggingClientLibrary"]
+)
+
+java_test(
+	name = "JavaLoggingClientTest",
+	srcs = ["JavaLoggingClientTest.java"],
+	deps = [":JavaLoggingClient"]
 )
