Changes to make shell test work (also with runs per test)

--- a/java/src/main/java/bazel/bootcamp/BUILD
+++ b/java/src/main/java/bazel/bootcamp/BUILD
@@ -22,7 +22,8 @@ java_library(
 java_binary(
 	name = "JavaLoggingClient",
 	srcs = ["JavaLoggingClient.java"],
-	deps = [":JavaLoggingClientLibrary"]
+	deps = [":JavaLoggingClientLibrary"],
+	visibility = ["//visibility:public"]
 )
 
 java_test(
